--- a/publish/index.html
+++ b/publish/index.html
@@ -2,9 +2,9 @@
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/slideshow.css">
+  <link rel="stylesheet" href="slideshow.css">
   <meta charset="utf-8">
-  <script src="assets/js/sls.js" type="text/javascript"></script>
+  <script src="slideshow.js" type="text/javascript"></script>
 </head>
 
 <body>
