changed function name

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     </div>
 	<script>
 
-	window.addEventListener('DOMContentLoaded', (event) => toplev(window.location.search, fillSlider) );
+	window.addEventListener('DOMContentLoaded', (event) => readSlides(window.location.search, fillSlider) );
 
 	</script>
 
